@@ -1,3 +1,7 @@
+2007-03-20 Andi Salzburger <Anreas.Salzburger@cern.ch>
+        * first configurable version
+        * tagged as MuonTrackingGeometry-00-00-37
+
 2007-03-14 Sarka Todorova <sarka.todorova@cern.ch>
 	* temporary(?) fix of retrieval of BOG stations with cutouts (MGM tree id link broken)
 	* tagged MuonTrackingGeometry-00-00-36
